[gd_scene load_steps=6 format=3 uid="uid://d2meyp7d6wawa"]

[ext_resource type="Script" path="res://globals/dialog/popups/invite_popup.gd" id="1_5id7h"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u7bkx"]
bg_color = Color(0.313726, 0.313726, 0.313726, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.439216, 0.439216, 0.439216, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="LabelSettings" id="LabelSettings_mh7r7"]
font_size = 18

[sub_resource type="InputEventAction" id="InputEventAction_5656f"]
action = &"close"

[sub_resource type="Shortcut" id="Shortcut_44gds"]
events = [SubResource("InputEventAction_5656f")]

[node name="InvitePopup" type="PanelContainer" node_paths=PackedStringArray("player_list")]
custom_minimum_size = Vector2(350, 500)
offset_right = 300.0
offset_bottom = 500.0
theme_override_styles/panel = SubResource("StyleBoxFlat_u7bkx")
script = ExtResource("1_5id7h")
player_list = NodePath("MarginContainer/VBoxContainer/PlayerList")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Invite Players"
label_settings = SubResource("LabelSettings_mh7r7")
horizontal_alignment = 1

[node name="PlayerList" type="ItemList" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
theme_override_colors/guide_color = Color(0, 0, 0, 0)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/icon_margin = 5
fixed_icon_size = Vector2i(40, 40)

[node name="CloseBtn" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(55, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
shortcut = SubResource("Shortcut_44gds")
shortcut_in_tooltip = false
text = "Close"

[connection signal="item_clicked" from="MarginContainer/VBoxContainer/PlayerList" to="." method="_on_player_list_item_clicked"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CloseBtn" to="." method="_on_close_btn_pressed"]
